--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "sass-embedded": "^1.78.0",
         "tailwindcss": "^3.2.1",
         "typescript": "^5.5.3",
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^2.0.24"
+    },
+    "dependencies": {
+        "bootstrap-sass": "^3.4.3"
     }
 }
